--- a/info/docs.texi
+++ b/info/docs.texi
@@ -17072,12 +17072,12 @@ of the source buffer.
 Switch to shell buffer by key. This provides a predictable
   means for switching to a specific shell buffer. When invoked
   from a non-shell-mode buffer that is a dired-buffer or is
-  visiting a file, invokes ‘cd ’ in the shell to change to the
-  value of ‘default-directory’ --- if called with a
-  prefix-arg. When already in a shell buffer, interactive prefix
-  arg ‘prefix’ causes this shell to be re-keyed if appropriate
-  --- see M-x emacspeak-wizards-shell-re-key for an explanation
-  of how re-keying works.
+  visiting a file, invokes ‘cd ’ in the shell to change to the.
+  value of ‘default-directory’ When already in a shell buffer,
+  interactive prefix arg ‘prefix’ causes this shell to be
+  re-keyed if appropriate --- see
+  M-x emacspeak-wizards-shell-re-key for an explanation of how
+  re-keying works.
 
 (fn &optional PREFIX)
 @end format
