emit default-value for user options

--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1155 commands and 146 options.
+This chapter documents a total of 1155 commands and 147 options.
 
 @menu
 * amixer::Set Audio Volume from Emacs.
@@ -328,6 +328,8 @@ Raise Master volume 5%.
 @defvar {User Option} amixer-device
 ALSA Control Device.
 
+Default Value: @verb{|default|}
+
 @end defvar
 
 @node cd-tool
@@ -373,6 +375,8 @@ cap C   Save clip to disk
 @defvar {User Option} cd-tool-start-command
 Name of cdstart command; most likely either "cdstart" or "cdplay".
 
+Default Value: @verb{|cdstart|}
+
 @end defvar
 
 @node dectalk-voices
@@ -403,6 +407,8 @@ Dectalk TTS.
 
 @defvar {User Option} dectalk-default-speech-rate
 Default speech rate . 
+
+Default Value: @verb{|225|}
 
 @end defvar
 
@@ -973,10 +979,14 @@ Speak version.
 @defvar {User Option} dtk-allcaps-prefix
 Prefix used to indicate AllCaps
 
+Default Value: @verb{| acc |}
+
 @end defvar
 
 @defvar {User Option} dtk-caps-prefix
 Prefix used to indicate capitalization
+
+Default Value: @verb{|cap|}
 
 @end defvar
 
@@ -989,35 +999,49 @@ More than 3 consecutive occurrences
 of a  pattern   is
 replaced with a repeat count. 
 
+Default Value: @verb{|(.  . _ - = / + * : ; % \/ /\ { } ~ $ ) # <> ^ < >)|}
+
 @end defvar
 
 @defvar {User Option} dtk-cloud-server
 Set this to your preferred cloud TTS server.
+
+Default Value: @verb{|cloud-outloud|}
 
 @end defvar
 
 @defvar {User Option} dtk-local-engine
 Engine we use  for our local TTS  server.
 
+Default Value: @verb{|outloud|}
+
 @end defvar
 
 @defvar {User Option} dtk-speech-rate-base
 Value of lowest speech rate.
+
+Default Value: @verb{|50|}
 
 @end defvar
 
 @defvar {User Option} dtk-speech-rate-step
 Speech rate step used by ‘dtk-set-predefined-speech-rate’.
 
+Default Value: @verb{|8|}
+
 @end defvar
 
 @defvar {User Option} dtk-unicode-character-replacement-alist
 Replacements for  characters.
 
+Default Value: @verb{|((150 . -) (9473 . -) (9475 . |) (176 .  degrees ) (8451 . Degree C) (8457 . Degree F ) (8220 . ") (8221 . ") (8902 . *) (173 . -) (8216 . `) (8217 . ') (8208 . -) (8211 .  -- ) (8212 .  --- ) (8202 .  ) (65279 .  ) (8204 . ) (8203 .  ) (8201 .  ) (8213 . ----) (8214 . ||) (8230 . ...) (8226 .  bullet ) (149 .  ... ) (8482 . TM) (64256 . ff) (64257 . fi) (64258 . fl) (64259 . ffi) (64260 . Ffl))|}
+
 @end defvar
 
 @defvar {User Option} dtk-unicode-name-transformation-rules-alist
 Alist of character name transformation rules.
+
+Default Value: @verb{|((BOX DRAWING lambda (_ignored) .) (^Mathematical Sans-Serif\( small\| capital\)? letter \(.*\)$ lambda (s) (match-string 2 s)) (^greek\( small\| capital\)? letter \(.*\)$ lambda (s) (match-string 2 s)) (^latin\( small\| capital\)? letter \(.*\)$ lambda (s) (match-string 2 s)) (^DEVANAGARI \(sign\|vowel sign\|letter\)? \(.*\)$ lambda (s) (match-string 2 s)))|}
 
 @end defvar
 
@@ -1025,16 +1049,22 @@ Alist of character name transformation rules.
 Characters of these charsets are  ignored by
   dtk-unicode-replace-chars.
 
+Default Value: @verb{|(ascii latin-iso8859-1)|}
+
 @end defvar
 
 @defvar {User Option} dtk-use-tones
 Toggle tones. 
+
+Default Value: @verb{|t|}
 
 @end defvar
 
 @defvar {User Option} tts-notification-device
 Virtual sound device to use for notifications stream.
 Set to nil to disable a separate Notification stream.
+
+Default Value: @verb{|tts_right|}
 
 @end defvar
 
@@ -1053,10 +1083,14 @@ It implements function emacspeak which loads the rest of the system.
 @defvar {User Option} emacspeak-play-emacspeak-startup-icon
 If set to T, emacspeak plays its icon as it launches.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-soundscapes
 Whether we should turn on soundscapes.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -1230,10 +1264,14 @@ not needed in Emacs 22.
 @defvar {User Option} emacspeak-speak-messages-filter
 List of strings used to filter spoken messages.
 
+Default Value: @verb{|(psession)|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-speak-tooltips
 Enable to get tooltips spoken.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -2062,10 +2100,14 @@ Web API  key for this application.
 See http://developer.bookshare.org/docs for details on how to get
   an API key. 
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-bookshare-directory
 Customize this to the root of where books are organized.
+
+Default Value: @verb{|/home/raman/books/book-share|}
 
 @end defvar
 
@@ -2664,6 +2706,8 @@ toggles personality under point.
 @defvar {User Option} emacspeak-comint-autospeak
 Speak comint output.
 Use M-x emacspeak-toggle-comint-autospeak to toggle this setting.
+
+Default Value: @verb{|t|}
 
 @end defvar
 
@@ -4105,25 +4149,35 @@ Custom URL executor for use in EPub Mode.
 @defvar {User Option} emacspeak-epub-bookshelf-directory
 Directory where we keep .bsf files defining various bookshelves.
 
+Default Value: @verb{|/home/raman/EBooks/bsf/|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-epub-calibre-root-dir
 Root of Calibre library.
+
+Default Value: @verb{|/home/raman/EBooks/calibre|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-epub-gutenberg-mirror
 Base URL  for Gutenberg mirror.
 
+Default Value: @verb{|http://www.gutenberg.org/ebooks/|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-epub-gutenberg-suffix
 Suffix of book type we retrieve.
 
+Default Value: @verb{|.epub.noimages|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-epub-library-directory
 Directory under which we store Epubs.
+
+Default Value: @verb{|/home/raman/EBooks/|}
 
 @end defvar
 
@@ -4211,15 +4265,21 @@ set the current local value to the result.
 Set to T if you dont want to see notification  messages from the
 server.
 
+Default Value: @verb{|t|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-erc-my-nick
 My IRC nick.
 
+Default Value: @verb{||}
+
 @end defvar
 
 @defvar {User Option} emacspeak-erc-speak-all-participants
 Speak all things said if t.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -5943,10 +6003,14 @@ Turn this on to make section navigation autospeak.
 This also reverses the meaning of the prefix-arg to section nav
   commands.
 
+Default Value: @verb{|t|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-eww-inhibit-images
 Turn this on to avoid rendering images.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -6160,10 +6224,14 @@ File used to save Emacspeak clipboard.
 The emacspeak clipboard provides a convenient mechanism for exchanging
 information between different Emacs sessions.
 
+Default Value: @verb{|/home/raman/.emacspeak//clipboard|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-curl-cookie-store
 Cookie store used by Curl.
+
+Default Value: @verb{|/home/raman/.curl-cookies|}
 
 @end defvar
 
@@ -6172,6 +6240,8 @@ Tramp locations used by Emacspeak tramp wizard.
 Locations added here via custom can be opened using command
 emacspeak-wizards-tramp-open-location
 bound to C-x @@ h C-t.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -6320,10 +6390,14 @@ Display RSS feed.
 Table of RSS/Atom feeds.
 The feed list is persisted to file saved-feeds on exit.
 
+Default Value: @verb{|((BBC News http://www.bbc.co.uk/syndication/feeds/news/ukfs_news/front_page/rss091.xml rss) (BBC Podcast Directory http://www.bbc.co.uk/podcasts.opml opml) (CNet Tech News http://feeds.feedburner.com/cnet/tcoc rss) (Wired News http://www.wired.com/news_drop/netcenter/netcenter.rdf rss))|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-feeds-awesome-rss
 Location of Awesome RSS
+
+Default Value: @verb{|/home/raman/sourceforge/awesome-rss-feeds/|}
 
 @end defvar
 
@@ -6430,6 +6504,8 @@ between ido, popup and helm.
 
 @defvar {User Option} emacspeak-flyspell-correct
 Correction style to use with flyspell.
+
+Default Value: @verb{|flyspell-correct-ido|}
 
 @end defvar
 
@@ -6603,10 +6679,14 @@ emacspeak-gnus-large-article lines will be considered to be a large article.
 A large article is not spoken all at once;
 instead you hear only the first screenful.
 
+Default Value: @verb{|100|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-gnus-punctuation-mode
 Pronunciation mode to use for gnus buffers.
+
+Default Value: @verb{|all|}
 
 @end defvar
 
@@ -7147,10 +7227,14 @@ current page.
 @defvar {User Option} emacspeak-google-kg-key
 API Key for Google Knowledge Graph.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-google-tts-default-language
 Default language used for Google TTS.
+
+Default Value: @verb{|en-us|}
 
 @end defvar
 
@@ -7375,6 +7459,8 @@ the entire list.
 @defvar {User Option} emacspeak-ido-typing-delay
 How long we wait before speaking completions.
 
+Default Value: @verb{|0.15|}
+
 @end defvar
 
 @node emacspeak-iedit
@@ -7454,6 +7540,8 @@ Possible values are:
 screenfull  -- speak the displayed screen
 node -- speak the entire node.
 
+Default Value: @verb{|node|}
+
 @end defvar
 
 @node emacspeak-ispell
@@ -7476,6 +7564,8 @@ i.e. you can move through corrections with C-r and C-s.
 @defvar {User Option} emacspeak-ispell-max-choices
 Emacspeak will not speak the choices if there are more than this
 many available corrections.
+
+Default Value: @verb{|10|}
 
 @end defvar
 
@@ -7563,6 +7653,8 @@ Speak most recent message if one exists.
 @defvar {User Option} emacspeak-jabber-speak-presence-alerts
 Set to T if you want to hear presence alerts.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @node emacspeak-jdee
@@ -7596,35 +7688,56 @@ Note that the <fn> key found on laptops is denoted <fn>
 @defvar {User Option} emacspeak-alt-keys
 Alt key bindings. 
 
+Default Value: @verb{|((, eldoc) (SPC emacspeak-eww-smart-tabs) (a emacspeak-feeds-atom-display) (b sox-binaural) (d sdcv-search-input) (e eww) (f ffap) (g rg) (l eww-open-file) (o emacspeak-feeds-opml-display) (p emacspeak-wizards-pdf-open) (q emacspeak-wizards-iex-show-price) (r emacspeak-feeds-rss-display) (s emacspeak-wizards-tune-in-radio-search) (t emacspeak-wizards-tune-in-radio-browse) (u emacspeak-m-player-url) (v visual-line-mode) (w define-word) (y emacspeak-m-player-youtube-player))|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ctl-z-keys
 CTL-z keymap.
+
+Default Value: @verb{|((SPC flyspell-mode) (b emacspeak-wizards-view-buffers-filtered-by-this-mode) (c calibredb) (d magit-dispatch) (e emacspeak-wizards-eww-buffer-list) (f magit-file-dispatch) (l locate) (n emacspeak-wizards-cycle-to-next-buffer) (p emacspeak-wizards-cycle-to-previous-buffer) (r restart-emacs) (s magit-status) (z suspend-frame))|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-hyper-keys
 Hyper-Key bindings. 
 
+Default Value: @verb{|((' emacspeak-m-player-using-hrtf) (, previous-buffer) (. next-buffer) (/ emacspeak-websearch-google-with-toolbelt) (: emacspeak-wizards-view-buffers-filtered-by-m-player-mode) (; emacspeak-m-player-using-openal) (C-a emacspeak-wizards-term) (C-b eww-list-bookmarks) (C-d dictionary-search) (C-e eshell) (C-j emacspeak-wizards-shell-toggle) (C-l emacspeak-librivox) (C-o eaf-open-browser) (C-t emacspeak-wizards-tramp-open-location) (DEL emacspeak-wizards-snarf-sexp) (TAB hippie-expand) (b eww-list-buffers) (c browse-url-chrome) (d magit-dispatch) (e gmaps) (f magit-file-dispatch) (g gnus) (h emacspeak-m-player-from-history) (k emacspeak-google-knowledge-search) (l locate) (m vm) (n emacspeak-wizards-cycle-to-next-buffer) (o find-file) (p emacspeak-wizards-cycle-to-previous-buffer) (r emacspeak-wizards-find-file-as-root) (s magit-status) (t twit) (u list-unicode-display) (w emacspeak-wizards-noaa-weather) (y yas-expand))|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-multi-keys
 Multi key bindings. 
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-personal-ctlx-keys
 Key bindings for use with C-e C-x. 
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-personal-keys
 Key bindings for  C-e x. 
 
+Default Value: @verb{|((, emacspeak-wizards-shell-directory-set) (. emacspeak-wizards-shell-directory-reset) (0 emacspeak-wizards-shell-by-key) (1 emacspeak-wizards-shell-by-key) (2 emacspeak-wizards-shell-by-key) (3 emacspeak-wizards-shell-by-key) (4 emacspeak-wizards-shell-by-key) (5 emacspeak-wizards-shell-by-key) (6 emacspeak-wizards-shell-by-key) (7 emacspeak-wizards-shell-by-key) (8 emacspeak-wizards-shell-by-key) (9 emacspeak-wizards-shell-by-key) (; emacspeak-m-player-loop) (= emacspeak-wizards-find-longest-line-in-region) (C emacspeak-wizards-colors) (SPC emacspeak-jabber-speak-recent-message) (a emacspeak-wizards-alpha-vantage-quotes) (b battery) (c emacspeak-wizards-color-wheel) (d emacspeak-speak-load-directory-settings) (e emacspeak-we-xsl-map) (f emacspeak-wizards-remote-frame) (h emacspeak-wizards-how-many-matches) (i ibuffer) (j emacspeak-jabber-popup-roster) (l emacspeak-m-player-youtube-live) (m mspools-show) (o emacspeak-wizards-occur-header-lines) (p paradox-list-packages) (q emacspeak-wizards-quote) (r jabber-activity-switch-to) (t emacspeak-speak-telephone-directory) (u emacspeak-wizards-units) (v emacspeak-wizards-vc-viewer) (w emacspeak-wizards-noaa-weather) (| emacspeak-wizards-squeeze-blanks) ( desktop-clear))|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-super-keys
 Super key bindings. 
+
+Default Value: @verb{|((. emacspeak-wizards-shell-directory-reset) (C-n emacspeak-wizards-google-headlines) (R emacspeak-webspace-feed-reader) (SPC emacspeak-wizards-scratch) (a emacspeak-wizards-execute-asynchronously) (c calculator) (d emacspeak-dired-downloads) (e elfeed) (f flyspell-mode) (h emacspeak-org-capture-link) (l emacspeak-m-player-locate-media) (m emacspeak-wizards-view-buffers-filtered-by-this-mode) (n emacspeak-wizards-google-news) (p proced) (r soundscape-restart) (s soundscape) (t soundscape-toggle) (u soundscape-update-mood))|}
+
+@end defvar
+
+@defvar {User Option} emacspeak-windows-keys
+Key bindings on the windows  key. 
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -7729,6 +7842,8 @@ more results.
 
 @defvar {User Option} emacspeak-librivox-local-cache
 Location where we cache LIBRIVOX playlists.
+
+Default Value: @verb{|/home/raman/.emacspeak/librivox|}
 
 @end defvar
 
@@ -8847,20 +8962,28 @@ M-l		emacspeak-m-player-load-playlist
 @defvar {User Option} emacspeak-m-player-clips
 Directory where we store clips.
 
+Default Value: @verb{|/home/raman/mp3/clips|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-m-player-custom-filters
 Additional filters to apply to streams.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-m-player-program
 Media player program.
 
+Default Value: @verb{|/usr/local/bin/mplayer|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-media-location-bindings
 Map  keys  to launch MPlayer on a  directory.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -9121,6 +9244,8 @@ advice for posting message commands
 
 @defvar {User Option} emacspeak-message-punctuation-mode
 Pronunciation mode to use for message buffers.
+
+Default Value: @verb{|all|}
 
 @end defvar
 
@@ -9927,66 +10052,92 @@ Writes out recognized text from all pages in current document.
 @defvar {User Option} emacspeak-ocr-compress-image
 Command used to compress the scanned tiff file.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-compress-image-options
 Options used for compressing tiff image.
+
+Default Value: @verb{|-c g3 |}
 
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-compress-photo-options
 Options used when created JPEG from  scanned photographs.
 
+Default Value: @verb{|-optimize -progressive|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-engine
 OCR engine to process acquired image.
+
+Default Value: @verb{|/home/raman/emacs/lisp/emacspeak/etc/tesseract.pl|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-engine-options
 Command line options to pass to OCR engine.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-image-extension
 Filename extension used for acquired image.
+
+Default Value: @verb{|.tif|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-jpeg-metadata-writer
 Program to add metadata to JPEG files.
 
+Default Value: @verb{|wrjpgcom|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-keep-uncompressed-image
 If set to T, uncompressed image is not removed.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-photo-compress
 Program to create JPEG compressed images.
 
+Default Value: @verb{|cjpeg|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-scan-image
 Name of image acquisition program.
+
+Default Value: @verb{|scanimage|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-scan-image-options
 Command line options to pass to image acquisition program.
 
+Default Value: @verb{|--resolution 300 --mode lineart --format=tiff|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-scan-photo-options
 Options  used when scanning in photographs.
+
+Default Value: @verb{|--mode color --format=pnm|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-ocr-working-directory
 Directory where images and OCR results
 will be placed.
+
+Default Value: @verb{|/home/raman/.emacspeak/ocr/|}
 
 @end defvar
 
@@ -10109,6 +10260,8 @@ echoes row header and element
 
 @defvar {User Option} emacspeak-org-table-after-movement-function
 The function to call after moving in a table
+
+Default Value: @verb{|emacspeak-org-table-speak-current-element|}
 
 @end defvar
 
@@ -10640,15 +10793,21 @@ Toggle use of pronunciation personality.
 @defvar {User Option} emacspeak-pronounce-common-xml-namespace-uri-pronunciations
 Namespace URIs.
 
+Default Value: @verb{|((http://www.w3.org/2005/Atom .  atom ) (http://www.w3.org/1999/02/22-rdf-syntax-ns# . RDF Syntax) (http://www.w3.org/2002/06/xhtml2 .  xhtml2 ) (http://www.w3.org/2003/XInclude . XInclude) (http://www.w3.org/1999/XSL/Transform .  XSLT ) (http://www.w3.org/2002/xforms .  XForms ) (http://www.w3.org/2001/xml-events .  XEvents ) (http://www.w3.org/2001/vxml .  vxml ) (http://www.w3.org/2001/XMLSchema-instance .  XSI ) (http://www.w3.org/2001/XMLSchema .  XSD ) (http://www.w3.org/1999/xhtml .  xhtml ) (http://purl.org/dc/elements/1.1/ . DC) (http://search.yahoo.com/mrss/ . media))|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-pronounce-dictionaries-file
 File that holds  emacspeak pronunciations.
 
+Default Value: @verb{|/home/raman/.emacspeak/.dictionary|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-pronounce-internet-smileys-pronunciations
 Smileys
+
+Default Value: @verb{|((:-) .  smile ) (;) .  half-wink ) (:) .  grin ) (:-( .  frown ) (:( .  sigh ) (:-I .  shrug ) (:-> .  sarcastic smile ) (>:-> .  devillish smile ) (>;-> .  lewd smile ) (;-) .  wink ))|}
 
 @end defvar
 
@@ -11056,6 +11215,8 @@ Optional interactive PREFIX arg toggles global value.
 
 @defvar {User Option} emacspeak-play-program
 Play program.
+
+Default Value: @verb{|/usr/bin/aplay|}
 
 @end defvar
 
@@ -12672,6 +12833,8 @@ You can use  command ‘emacspeak-toggle-audio-indentation’ bound
 to C-e d i to toggle this
 setting.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-character-echo
@@ -12680,12 +12843,16 @@ You can
 use C-e d k to toggle this
 setting.
 
+Default Value: @verb{|t|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-line-echo
 If t, then emacspeak echoes lines as you type.
 You can use C-e d l to set this
 option.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -12697,11 +12864,15 @@ You can use command
 ‘emacspeak-toggle-mail-alert’ bound to
 C-e M-m to set this option. 
 
+Default Value: @verb{|t|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-mail-alert-interval
 Interval in seconds between mail alerts for the same pending
   message.
+
+Default Value: @verb{|300|}
 
 @end defvar
 
@@ -12709,15 +12880,21 @@ Interval in seconds between mail alerts for the same pending
 Mail spool file examined  to alert you about newly
 arrived mail.
 
+Default Value: @verb{|/var/mail/raman|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-silence-hook
 Functions run after emacspeak-silence is called.
 
+Default Value: @verb{|(emacspeak-m-player-pause-or-resume emacspeak-emms-pause-or-resume)|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-speak-filter-persistent-store
 File where emacspeak filters are persisted.
+
+Default Value: @verb{|/home/raman/.emacspeak/.filters|}
 
 @end defvar
 
@@ -12728,6 +12905,8 @@ message area.  You can use command
 ‘emacspeak-toggle-speak-messages’ bound to
 C-e q.
 
+Default Value: @verb{|t|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-speak-time-format-string
@@ -12735,10 +12914,14 @@ Format string that specifies how the time should be spoken.
 See the documentation for function
 ‘format-time-string’
 
+Default Value: @verb{|%H:%M   on %A, %B %_e, %Y |}
+
 @end defvar
 
 @defvar {User Option} emacspeak-speak-zoneinfo-directory
 Directory containing timezone data.
+
+Default Value: @verb{|/usr/share/zoneinfo/|}
 
 @end defvar
 
@@ -12746,6 +12929,8 @@ Directory containing timezone data.
 If t, then emacspeak echoes words as you type.
 You can use C-e d w to toggle this
 option.
+
+Default Value: @verb{|t|}
 
 @end defvar
 
@@ -14542,11 +14727,15 @@ Yank specified header into kill ring.
 Executable that converts calendar invitations    on
   standard input to plain text.
 
+Default Value: @verb{|/home/raman/emacs/lisp/emacspeak/etc/cal2text|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-vm-customize-mime-settings
 Non-nil will cause Emacspeak to configure VM mime
 settings to match what the author of Emacspeak uses.
+
+Default Value: @verb{|t|}
 
 @end defvar
 
@@ -14554,16 +14743,22 @@ settings to match what the author of Emacspeak uses.
 Executable that converts PDF on standard input to plain
 text using pdftotext.
 
+Default Value: @verb{|/home/raman/emacs/lisp/emacspeak/etc/pdf2text|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-vm-use-raman-settings
 Should VM  use the customizations used by the author of Emacspeak.
+
+Default Value: @verb{|t|}
 
 @end defvar
 
 @defvar {User Option} emacspeak-vm-voice-loc
 Set this to T if you want messages automatically voice locked.
 Note that some badly formed mime messages  cause trouble.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -15269,6 +15464,8 @@ Select XSL transformation applied to Web pages before they are displayed .
 @defvar {User Option} emacspeak-we-filters-rename-buffer
 Set to T  if you want the buffer name to contain the applied filter.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @node emacspeak-websearch
@@ -15591,6 +15788,8 @@ Yank link under point into kill ring.
 
 @defvar {User Option} emacspeak-webspace-feeds
 Feeds to use in Headline Ticker.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -17459,6 +17658,8 @@ Buffer menu filtered by  mode of current-buffer.
 @defvar {User Option} emacspeak-brightness-autoblack
 Set to T to automatically turn display black.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-iex-api-key
@@ -17467,11 +17668,15 @@ See IEX Login Console   at
 https://iexcloud.io/cloud-login/
 for how to get  an API key. 
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-speak-telephone-directory
 File holding telephone directory.
 This is just a text file, and we use grep to search it.
+
+Default Value: @verb{|/home/raman/.emacspeak/tel-dir|}
 
 @end defvar
 
@@ -17479,15 +17684,21 @@ This is just a text file, and we use grep to search it.
 API Key  used to retrieve stock data from alpha-vantage.
 Visit https://www.alphavantage.co/support/#api-key to get your key.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-wizards-find-switches-widget
 Widget to get find switch.
 
+Default Value: @verb{|(cons :tag Find Expression (menu-choice :tag Find (string :tag Test) (const -name) (const -iname) (const -path) (const -ipath) (const -regexp) (const -iregexp) (const -exec) (const -ok) (const -newer) (const -anewer) (const -cnewer) (const -used) (const -user) (const -uid) (const -nouser) (const -nogroup) (const -perm) (const -fstype) (const -lname) (const -ilname) (const -empty) (const -prune) (const -or) (const -not) (const -inum) (const -atime) (const -ctime) (const -mtime) (const -amin) (const -mmin) (const -cmin) (const -size) (const -type) (const -maxdepth) (const -mindepth) (const -mount) (const -noleaf) (const -xdev)) (string :tag Value))|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-wizards-pdf-to-text-options
 options to Command for running pdftotext.
+
+Default Value: @verb{|-layout|}
 
 @end defvar
 
@@ -17496,15 +17707,24 @@ Set this to the stock tickers you want to check. Default is
 GAFA. Tickers are separated by white-space and are automatically
 sorted in lexical order with duplicates removed when saving.
 
+Default Value: @verb{|aapl
+amzn
+fb
+goog|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-wizards-project-shells
 List of shell-name/initial-directory pairs.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} emacspeak-wizards-remote-workstation
 Name of remote workstation.
+
+Default Value: @verb{||}
 
 @end defvar
 
@@ -17632,6 +17852,8 @@ Start ESpeak.
 
 @defvar {User Option} espeak-default-speech-rate
 Default speech rate for eSpeak.
+
+Default Value: @verb{|175|}
 
 @end defvar
 
@@ -18025,26 +18247,36 @@ Used by modules like gphoto, gblogger etc.
 @defvar {User Option} g-atom-view-xsl
 XSLT transform to convert Atom feed to HTML.
 
+Default Value: @verb{|/home/raman/emacs/lisp/emacspeak/xsl/atom-view.xsl|}
+
 @end defvar
 
 @defvar {User Option} g-cookie-jar
 Cookie jar used for Google services.
 Customize this to live on your local disk.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} g-curl-common-options
 Common options to pass to all Curl invocations.
+
+Default Value: @verb{|--http1.0 --compressed --silent --location --location-trusted --max-time 4 --connect-timeout 1|}
 
 @end defvar
 
 @defvar {User Option} g-curl-debug
 Set to T to see Curl stderr output.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} g-xslt-program
 XSLT Processor.
+
+Default Value: @verb{|xsltproc|}
 
 @end defvar
 
@@ -18306,11 +18538,15 @@ This function has :around advice: ‘ad-Advice-gmaps-walking-directions’.
 @defvar {User Option} gmaps-api-key
 Maps  API  key --- goto  https://code.google.com/apis/console to get one.
 
+Default Value: @verb{|nil|}
+
 @end defvar
 
 @defvar {User Option} gmaps-my-address
 Location address. Setting this updates gmaps-my-location
 coordinates via geocoding.
+
+Default Value: @verb{|nil|}
 
 @end defvar
 
@@ -18471,6 +18707,8 @@ This module defines the various voices used in voice-lock mode by Mac TTS.
 @defvar {User Option} mac-default-speech-rate
 Default speech rate for mac.
 
+Default Value: @verb{|225|}
+
 @end defvar
 
 @node outloud-voices
@@ -18503,6 +18741,8 @@ Start Outloud.
 
 @defvar {User Option} outloud-default-speech-rate
 Default speech rate.
+
+Default Value: @verb{|50|}
 
 @end defvar
 
@@ -18703,16 +18943,22 @@ Optional interactive prefix arg ‘prompt-mode’ prompts for the mode.
 @defvar {User Option} soundscape-data
 Soundscape data directory.
 
+Default Value: @verb{|/home/raman/.boodler/Collection|}
+
 @end defvar
 
 @defvar {User Option} soundscape-device
 Alsa sound device to use for soundscapes.
+
+Default Value: @verb{|default|}
 
 @end defvar
 
 @defvar {User Option} soundscape-manager-options
 User customizable options list passed to boodler.
 Defaults specify alsa as the output and set master volume
+
+Default Value: @verb{|(-m 0.3)|}
 
 @end defvar
 
@@ -19058,11 +19304,15 @@ Play wind-down set of  binaural beats for ‘length’ seconds.
 User specified offset that is added to default gain when generating
 tones using SoX, e.g., for binaural beats.
 
+Default Value: @verb{|0|}
+
 @end defvar
 
 @defvar {User Option} sox-binaural-slider-scale
 Scale factor used to compute slide duration when moving from one
 binaural beat to another.
+
+Default Value: @verb{|5.0|}
 
 @end defvar
 
@@ -19141,125 +19391,175 @@ distinct parts of the utterance.
 @defvar {User Option} voice-animate-extra-settings
 Settings for voice-animate-extra
 
+Default Value: @verb{|(nil nil 8 8 8)|}
+
 @end defvar
 
 @defvar {User Option} voice-animate-medium-settings
 Settings for voice-animate-medium
+
+Default Value: @verb{|(nil nil 7 7 7)|}
 
 @end defvar
 
 @defvar {User Option} voice-animate-settings
 Settings for voice-animate
 
+Default Value: @verb{|(nil nil 6 6 6)|}
+
 @end defvar
 
 @defvar {User Option} voice-annotate-settings
 Settings for voice-annotate
+
+Default Value: @verb{|(nil nil 4 0 4)|}
 
 @end defvar
 
 @defvar {User Option} voice-bolden-and-animate-settings
 Settings for voice-bolden-and-animate
 
+Default Value: @verb{|(nil 3 8 8 8)|}
+
 @end defvar
 
 @defvar {User Option} voice-bolden-extra-settings
 Settings for voice-bolden-extra
+
+Default Value: @verb{|(nil 1 nil 8)|}
 
 @end defvar
 
 @defvar {User Option} voice-bolden-medium-settings
 Settings for voice-bolden-medium
 
+Default Value: @verb{|(nil 2 nil 7)|}
+
 @end defvar
 
 @defvar {User Option} voice-bolden-settings
 Settings for voice-bolden
+
+Default Value: @verb{|(nil 3 nil 6)|}
 
 @end defvar
 
 @defvar {User Option} voice-brighten-extra-settings
 Settings for voice-brighten-extra
 
+Default Value: @verb{|(nil nil nil 3 8)|}
+
 @end defvar
 
 @defvar {User Option} voice-brighten-medium-settings
 Settings for voice-brighten-medium
+
+Default Value: @verb{|(nil nil nil 4 7)|}
 
 @end defvar
 
 @defvar {User Option} voice-brighten-settings
 Settings for voice-brighten
 
+Default Value: @verb{|(nil nil nil 5 6)|}
+
 @end defvar
 
 @defvar {User Option} voice-indent-settings
 Settings for voice-indent
+
+Default Value: @verb{|(nil nil 3 1 3)|}
 
 @end defvar
 
 @defvar {User Option} voice-lighten-extra-settings
 Settings for voice-lighten-extra
 
+Default Value: @verb{|(nil 9 nil 4)|}
+
 @end defvar
 
 @defvar {User Option} voice-lighten-medium-settings
 Settings for voice-lighten-medium
+
+Default Value: @verb{|(nil 7 nil 3)|}
 
 @end defvar
 
 @defvar {User Option} voice-lighten-settings
 Settings for voice-lighten
 
+Default Value: @verb{|(nil 6 nil 2)|}
+
 @end defvar
 
 @defvar {User Option} voice-monotone-extra-settings
 Settings for voice-monotone-extra
+
+Default Value: @verb{|(nil nil 0 0)|}
 
 @end defvar
 
 @defvar {User Option} voice-monotone-medium-settings
 Settings for voice-monotone-medium
 
+Default Value: @verb{|(nil nil 2 2)|}
+
 @end defvar
 
 @defvar {User Option} voice-monotone-settings
 Settings for voice-monotone
+
+Default Value: @verb{|(nil nil 4 4)|}
 
 @end defvar
 
 @defvar {User Option} voice-overlay-0-settings
 Settings for voice-overlay-0
 
+Default Value: @verb{|(nil 8 nil nil nil nil)|}
+
 @end defvar
 
 @defvar {User Option} voice-overlay-1-settings
 Settings for voice-overlay-1
+
+Default Value: @verb{|(nil nil 8 nil nil nil)|}
 
 @end defvar
 
 @defvar {User Option} voice-overlay-2-settings
 Settings for voice-overlay-2
 
+Default Value: @verb{|(nil nil nil 8 nil nil)|}
+
 @end defvar
 
 @defvar {User Option} voice-overlay-3-settings
 Settings for voice-overlay-3
+
+Default Value: @verb{|(nil nil nil nil 8 nil)|}
 
 @end defvar
 
 @defvar {User Option} voice-smoothen-extra-settings
 Settings for voice-smoothen-extra
 
+Default Value: @verb{|(nil nil nil 0 2)|}
+
 @end defvar
 
 @defvar {User Option} voice-smoothen-medium-settings
 Settings for voice-smoothen-medium
 
+Default Value: @verb{|(nil nil nil 2 4)|}
+
 @end defvar
 
 @defvar {User Option} voice-smoothen-settings
 Settings for voice-smoothen
+
+Default Value: @verb{|(nil nil nil 4 6)|}
 
 @end defvar
 
@@ -19383,6 +19683,8 @@ Toggle audibility of personality under point  .
 Hook run after entering or leaving ‘voice-lock-mode’.
 No problems result if this variable is not bound.
 ‘add-hook’ automatically binds it.  (This is true for all hook variables.)
+
+Default Value: @verb{|(voice-lock-mode-set-explicitly)|}
 
 @end defvar
 
