--- a/info/preamble.texi
+++ b/info/preamble.texi
@@ -17,9 +17,9 @@ The manual is divided into the following chapters:
 * Voice Lock: Voice Lock.
 * Using Online Help: Using Online Help.
 * Emacs Packages:  Emacs Packages.
-* Running Terminal Based Applications: Running Terminal Based Applications.
-* Emacspeak Keymaps: Emacspeak Keymaps
+* Emacspeak Keymaps: Emacspeak Keymaps.
 * Emacspeak Commands And Options:  Emacspeak Commands And Options.
+* Running Terminal Based Applications: Running Terminal Based Applications.
 * Emacspeak Keyboard Commands: Emacspeak Keyboard Commands.
 * TTS Servers:  TTS Servers.
 *  Emacspeak At Twenty: Emacspeak At Twenty.
